--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -5,7 +5,9 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <title>Workspace / grbl</title>
+    <title>
+        Oltronic CNC 
+    </title>
 
     <!-- ChiliPeppr is based on bootstrap CSS. -->
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -943,7 +945,7 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
             // Load the dragdrop element into workspace toolbar
             // http://jsfiddle.net/chilipeppr/Z9F6G/
             chilipeppr.load("#com-chilipeppr-ws-gcode-dragdrop",
-                "http://raw.githubusercontent.com/Oltronic/dragdrop/master/auto-generated-widget.html",
+                "http://raw.githubusercontent.com/Oltronic/elem-dragdrop/master/auto-generated-widget.html",
                 function() {
                     require(["inline:com-chilipeppr-elem-dragdrop"], function(dd) {
                         console.log("inside require of dragdrop");
@@ -1004,7 +1006,7 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
             // http://jsfiddle.net/chilipeppr/y3HRF
             chilipeppr.load("#com-chilipeppr-3dviewer",
                 //"http://fiddle.jshell.net/chilipeppr/y3HRF/show/light/",
-                "http://raw.githubusercontent.com/chilipeppr/widget-3dviewer/master/auto-generated-widget.html",
+                 "http://raw.githubusercontent.com/Oltronic/widget-3dviewer/master/auto-generated-widget.html",
 
                 function() {
                     console.log("got callback done loading 3d");
@@ -1320,7 +1322,7 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
             // Gcode List
             // http://jsfiddle.net/chilipeppr/a4g5ds5n/
             chilipeppr.load("#com-chilipeppr-gcode-list",
-                "http://fiddle.jshell.net/chilipeppr/a4g5ds5n/show/light/",
+               "http://raw.githubusercontent.com/Oltronic/widget-gcodelist/master/auto-generated-widget.html",
                 //"http://jsfiddle.net/jarret/0a53jy0x/show/light",
 
                 function() {
@@ -1337,7 +1339,7 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
             //This widget is locked at version 97 until upgrades can be tested with the override code.
             chilipeppr.load(
                 "com-chilipeppr-xyz",
-                "http://fiddle.jshell.net/chilipeppr/gh45j/97/show/light/",
+                "http://raw.githubusercontent.com/Oltronic/widget-axes/master/auto-generated-widget.html",
 
                 function() {
                     cprequire(
@@ -1685,7 +1687,7 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
     <!-- This is the workspace layout for the GRBL Workspace -->
     <div id="com-chilipeppr-ws-gcode-wrapper" class="dropArea">
         <div id="com-chilipeppr-ws-gcode-dragdropoverlay" class="hidden">
-            <div class="well">Drag and Drop Gcode Files Onto Browser Window</div>
+            <div class="well">Privuci Gcode na radnu povrsinu.</div>
         </div>
         <div class="container-fluid">
             <div class="row">
@@ -1694,12 +1696,11 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
                     <div id="com-chilipeppr-3dviewer">Load 3D Viewport Here</div>
                     <!-- Workspace Hdr -->
                     <div id="com-chilipeppr-ws-gcode-hdr" class="com-chilipeppr-ws-hdr zhigh well">
-                        GRBL Workspace
+                        Datoteke
                         <div id="com-chilipeppr-ws-gcode-menu" class="">
                             <div class="pull-right">
                                 <div class="dropdown xpull-right">
-                                    <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span>
-                                    </button>
+                                   
                                     <ul class="dropdown-menu dropdown-menu-ws" role="menu">
                                         <li id="com-chilipeppr-ws-gcode-menu-billboard" style="width:350px;"></li>
                                     </ul>
@@ -1707,47 +1708,30 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
                             </div>
                             <div id="com-chilipeppr-ws-gcode-dragdrop" style="margin-right:6px;" class=""></div>
                             <!-- <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default zipwhip-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Get a text sent to you when your CNC job is completed." data-trigger="hover" data-delay="100"><span class="zipwhip"></span>
-                            </button>
+                            
                             <!-- </div>
                         <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default autolevel-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Allows you to auto-level your PCB before milling. Most raw PCB boards have a slight warpage. This widget lets you probe the warpage and then it auto-scales your Gcode to match the warpage so you get very clean/predictable z-positions in your milling job."
-                            data-trigger="hover" data-delay="100">Auto-Level</button>
                             <!-- </div>
                         <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default macro-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Run a macro." data-trigger="hover" data-delay="100">Macro</button>
                             <!-- </div>
                         <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default jscut-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Load file from JSCut" data-trigger="hover" data-delay="100">JScut</button>
-                            <button type="button" class="btn btn-xs btn-default eagle-button" data-container="body" data-toggle="popover" data-placement="auto" xdata-content="Laser Solderer" data-trigger="hover" data-delay="100">Eagle BRD Import</button>
-                            <button type="button" class="btn btn-xs btn-default gpio-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="GPIO Server by Ben Delarre. Allows you to control your GPIO ports on a Raspberry Pi or Beagle Bone Black to toggle on/off hardware components. For example, you could toggle a fan on/off via GPIO."
-                            data-trigger="hover" data-delay="100">GPIO</button>
-                            <button type="button" class="btn btn-xs btn-default shuttlexpress-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="ShuttleXpress Jog Dial." data-trigger="hover" data-delay="100">ShuttleXpress</button>
-                            <button type="button" class="btn btn-xs btn-default touchplate-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your Z zero of your workpiece and set it." data-trigger="hover"
-                            data-delay="100">Touch Plate</button>
+                            <button type="button" class="btn btn-xs btn-default jscut-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Ucitaj fajl iz JSCuta" data-trigger="hover" data-delay="100">JScut</button>
                             <!-- </div>
                         <div class="btn-group"> -->
                             <!-- </div> -->
                         </div>
                     </div>
                     <!-- Zipwhip Text Messaging -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-zipwhip"></div>
                     <!-- Auto Leveller -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-autolevel">Auto-Level Here</div>
                     <!-- Macro -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-macro">Macro Here</div>
                     <!-- JScut -->
                     <div class="zhigh hidden" id="com-chilipeppr-ws-jscut">Jscut Here</div>
                     <!-- Eagle BRD -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-eagle">Eagle BRD Here</div>
                     <!-- GPIO -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-gpio">GPIO Here</div>
 
                     <!-- shuttlexpress -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-shuttlexpress">ShuttleXpress Here</div>
 
                     <!-- Touch Plate -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-touchplate">Touch Plate Here</div>
 
                     <!-- Gcode List -->
                     <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
