--- a/workspace.html
+++ b/workspace.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
     <title>
-        <!--(auto-fill by runme.js-->
+        Oltronic CNC 
     </title>
 
     <!-- ChiliPeppr is based on bootstrap CSS. -->
@@ -39,7 +39,7 @@
     <!-- This is the workspace layout for the GRBL Workspace -->
     <div id="com-chilipeppr-ws-gcode-wrapper" class="dropArea">
         <div id="com-chilipeppr-ws-gcode-dragdropoverlay" class="hidden">
-            <div class="well">Drag and Drop Gcode Files Onto Browser Window</div>
+            <div class="well">Privuci Gcode na radnu povrsinu.</div>
         </div>
         <div class="container-fluid">
             <div class="row">
@@ -48,12 +48,11 @@
                     <div id="com-chilipeppr-3dviewer">Load 3D Viewport Here</div>
                     <!-- Workspace Hdr -->
                     <div id="com-chilipeppr-ws-gcode-hdr" class="com-chilipeppr-ws-hdr zhigh well">
-                        GRBL Workspace
+                        Datoteke
                         <div id="com-chilipeppr-ws-gcode-menu" class="">
                             <div class="pull-right">
                                 <div class="dropdown xpull-right">
-                                    <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span>
-                                    </button>
+                                   
                                     <ul class="dropdown-menu dropdown-menu-ws" role="menu">
                                         <li id="com-chilipeppr-ws-gcode-menu-billboard" style="width:350px;"></li>
                                     </ul>
@@ -61,47 +60,30 @@
                             </div>
                             <div id="com-chilipeppr-ws-gcode-dragdrop" style="margin-right:6px;" class=""></div>
                             <!-- <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default zipwhip-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Get a text sent to you when your CNC job is completed." data-trigger="hover" data-delay="100"><span class="zipwhip"></span>
-                            </button>
+                            
                             <!-- </div>
                         <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default autolevel-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Allows you to auto-level your PCB before milling. Most raw PCB boards have a slight warpage. This widget lets you probe the warpage and then it auto-scales your Gcode to match the warpage so you get very clean/predictable z-positions in your milling job."
-                            data-trigger="hover" data-delay="100">Auto-Level</button>
                             <!-- </div>
                         <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default macro-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Run a macro." data-trigger="hover" data-delay="100">Macro</button>
                             <!-- </div>
                         <div class="btn-group"> -->
-                            <button type="button" class="btn btn-xs btn-default jscut-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Load file from JSCut" data-trigger="hover" data-delay="100">JScut</button>
-                            <button type="button" class="btn btn-xs btn-default eagle-button" data-container="body" data-toggle="popover" data-placement="auto" xdata-content="Laser Solderer" data-trigger="hover" data-delay="100">Eagle BRD Import</button>
-                            <button type="button" class="btn btn-xs btn-default gpio-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="GPIO Server by Ben Delarre. Allows you to control your GPIO ports on a Raspberry Pi or Beagle Bone Black to toggle on/off hardware components. For example, you could toggle a fan on/off via GPIO."
-                            data-trigger="hover" data-delay="100">GPIO</button>
-                            <button type="button" class="btn btn-xs btn-default shuttlexpress-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="ShuttleXpress Jog Dial." data-trigger="hover" data-delay="100">ShuttleXpress</button>
-                            <button type="button" class="btn btn-xs btn-default touchplate-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your Z zero of your workpiece and set it." data-trigger="hover"
-                            data-delay="100">Touch Plate</button>
+                            <button type="button" class="btn btn-xs btn-default jscut-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Ucitaj fajl iz JSCuta" data-trigger="hover" data-delay="100">JScut</button>
                             <!-- </div>
                         <div class="btn-group"> -->
                             <!-- </div> -->
                         </div>
                     </div>
                     <!-- Zipwhip Text Messaging -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-zipwhip"></div>
                     <!-- Auto Leveller -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-autolevel">Auto-Level Here</div>
                     <!-- Macro -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-macro">Macro Here</div>
                     <!-- JScut -->
                     <div class="zhigh hidden" id="com-chilipeppr-ws-jscut">Jscut Here</div>
                     <!-- Eagle BRD -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-eagle">Eagle BRD Here</div>
                     <!-- GPIO -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-gpio">GPIO Here</div>
 
                     <!-- shuttlexpress -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-shuttlexpress">ShuttleXpress Here</div>
 
                     <!-- Touch Plate -->
-                    <div class="zhigh hidden" id="com-chilipeppr-ws-touchplate">Touch Plate Here</div>
 
                     <!-- Gcode List -->
                     <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
