Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -335,7 +335,7 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
                             isSingleSelectMode: true,
                             defaultBuffer: "default",
                             defaultBaud: 115200,
-                            bufferEncouragementMsg: 'For your device please choose the "default" buffer in the pulldown and a 115200 baud rate before connecting.'
+                            bufferEncouragementMsg: 'Odaberite grbl i 115200 buffer rate prije konektovanja.'
                         });
                         //spjs.showBody();
                         //spjs.consoleToggle();
@@ -355,7 +355,7 @@ cpdefine("inline:com-chilipeppr-workspace-grbl", ["chilipeppr_ready"], function(
             var that = this;
             chilipeppr.load(
                 "#com-chilipeppr-widget-spconsole-instance",
-                "http://fiddle.jshell.net/chilipeppr/rczajbx0/show/light/",
+                "http://raw.githubusercontent.com/Oltronic/widget-console/master/auto-generated-widget.html",
                 function() {
                     // Callback after widget loaded into #com-chilipeppr-widget-spconsole-instance
                     cprequire(
