--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -199,7 +199,7 @@ cprequire_test(["inline:com-chilipeppr-workspace-grbl"], function(ws) {
     ws.init();
 
     // Do some niceties for testing like margins on widget and title for browser
-    $('title').html("grbl Workspace");
+    $('title').html("Oltronic CNC");
     $('body').css('padding', '10px');
 
 } /*end_test*/ );
